# Nauz-File-Detector

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  PKGBUILD  README.md  THANKS.md  build_archpkg.sh  build_dpkg.sh  build_lin64.sh  build_linux64.sh  build_mac.sh  build_msvc_win32.bat  build_msvc_win64.bat  build_msvc_winxp.bat  build_win32.bat  build_win64.bat  build_win_generic.cmd  build_winxp.bat  changelog.txt  configure  configure.ac  create_appimage.sh  global.h  install.iss  install.sh  release_version.txt
.github/workflows/: builder.yml  c-cpp.yml  github_workflows_build-qt-app.yml
DEBIAN/: control  nfd.desktop
build_libs/: build_libs.pro
console_source/: CMakeLists.txt  console_source.pro  main_console.cpp
doc/: BUILD.md  THANKS.md
docs/: BUILD.md  RUN.md
gui_source/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogdirectoryscan.cpp  dialogdirectoryscan.h  dialogdirectoryscan.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  gui_source.pro  gui_source_tr.pro  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp
gui_source/translation/: nfd_ar.ts  nfd_de.ts  nfd_es.ts  nfd_fr.ts  nfd_he.ts  nfd_id.ts  nfd_it.ts  nfd_ja.ts  nfd_ko.ts  nfd_pl.ts  nfd_pt_BR.ts  nfd_pt_PT.ts  nfd_ru.ts  nfd_tr.ts  nfd_uk.ts  nfd_vi.ts  nfd_zh.ts  nfd_zh_TW.ts
res/: license.txt  readme.txt  resource.rc  resource_icon.rc  resources_gui.qrc
res/icons/: main.icns
res/linux/: nfd.desktop.in
res/macos/: Info.plist  Info.plist.in
res/windows/: resource.rc  resource.rc.in  resource_icon.rc  resource_icon.rc.in
src/: CMakeLists.txt  global.h
src/cli/: CMakeLists.txt  main_console.cpp
src/console/: CMakeLists.txt  main_console.cpp
src/gui/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp
src/gui/translation/: nfd_ar.ts  nfd_ar_AR.ts  nfd_bn_BN.ts  nfd_de.ts  nfd_de_DE.ts  nfd_es.ts  nfd_es_ES.ts  nfd_fa_FA.ts  nfd_fr_FR.ts  nfd_he.ts  nfd_he_IL.ts  nfd_id_ID.ts  nfd_it_IT.ts  nfd_ja.ts  nfd_ja_JP.ts  nfd_ko_KR.ts  nfd_pl_PL.ts  nfd_pt_BR.ts  nfd_pt_PT.ts  nfd_ru.ts  nfd_ru_RU.ts  nfd_sv_SE.ts  nfd_tr_TR.ts  nfd_uk_UA.ts  nfd_vi_VN.ts  nfd_zh.ts  nfd_zh_CN.ts  nfd_zh_TW.ts
winloader_source/: winloader.cpp
